[tool.poetry]
name = "dev-barrier-logic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dev_barrier_logic"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
sse-starlette = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
